<resources>
    <string name="app_name">GaHu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="register">Register</string>
    <string name="hint_username">Username</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="btn_logout">Logout</string>
    <string name="tv_change_password">Change password</string>
    <string name="cd_exhausted">exhausted</string>
    <string name="trophy">Trophy</string>
    <string name="psn_profile">PSN Profile</string>
    <string name="games_played">GAMES PLAYED</string>
    <string name="earned_trophies">EARNED TROPHIES</string>
    <string name="world_rank">WORLD RANK</string>
    <string name="recently_played">Recently played</string>
    <string name="trophies">Trophies</string>
    <string name="earned">Earned</string>
    <string name="available">Available</string>
    <string name="view_game">View Game</string>
</resources>