<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="16dp"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

    <include
        android:id="@+id/item_game"
        layout="@layout/item_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/trophies"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_earned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:text="35" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/earned"
                android:textColor="@color/white" />

        </LinearLayout>

        <include
            android:id="@+id/layout_completion"
            layout="@layout/progress_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:text="40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/available"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/ll_platinum_trophy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/trophy_icon"
                android:layout_height="@dimen/trophy_icon"
                android:src="@drawable/platinum" />

            <TextView
                android:id="@+id/tv_platinum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textColor="@color/platinum"
                android:textSize="20sp"
                tools:text="68" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_gold_trophy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ll_silver_trophy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ll_platinum_trophy"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/trophy_icon"
                android:layout_height="@dimen/trophy_icon"
                android:src="@drawable/gold" />

            <TextView
                android:id="@+id/tv_gold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textColor="@color/gold"
                android:textSize="20sp"
                tools:text="309" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_silver_trophy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ll_bronze_trophy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ll_gold_trophy"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/trophy_icon"
                android:layout_height="@dimen/trophy_icon"
                android:src="@drawable/silver" />

            <TextView
                android:id="@+id/tv_silver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textColor="@color/silver"
                android:textSize="20sp"
                tools:text="736" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bronze_trophy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/trophy_icon"
                android:layout_height="@dimen/trophy_icon"
                android:src="@drawable/bronze" />

            <TextView
                android:id="@+id/tv_bronze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textColor="@color/bronze"
                android:textSize="20sp"
                tools:text="2088" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/view_game"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:backgroundTint="@color/btn_gray_color"
        app:cornerRadius="100dp" />

</LinearLayout>